various version updates
and remove security manager flag